# pixie

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  NEXT_STEPS.md  README.md  defined-in-js.js  index.html
.claude/: settings.local.json
assets/shader/: font.wgsl
engine/: Cargo.toml
engine/assets/shader/: font.wgsl
engine/src/: application.rs  components.rs  config.rs  engine.rs  lib.rs
engine/src/dispatcher/: multi_thread.rs
engine/src/renderer/: builder.rs  font_manager.rs  gpu_resource_manager.rs  mesh.rs  pipeline_manager.rs  render_input_data.rs  renderer.rs  texture.rs  vertex.rs
engine/src/resources/: camera.rs  input_handler.rs  mod.rs
engine/src/systems/: mod.rs  update_animation.rs  update_physics.rs
examples/flappy_bird/: Cargo.toml  README.md  index.html
examples/flappy_bird/src/: builder.rs  components.rs  flappy_app.rs  game_configs.rs  game_state.rs  lib.rs  main.rs  wasm_bindings.rs  winit_state.rs
examples/flappy_bird/src/resources/: game_stage.rs  gene_handler.rs  mod.rs  score.rs
examples/flappy_bird/src/system/: check_collision.rs  check_game_stage.rs  mod.rs  process_nn.rs  scroll_background.rs  scroll_pipe.rs  update_player.rs
examples/physics_demo/: Cargo.toml  index.html
examples/physics_demo/src/: components.rs  config.rs  lib.rs  main.rs  physics_app.rs
examples/physics_demo/src/system/: mod.rs
pixie/: Cargo.toml
pixie/assets/shader/: font.wgsl  texture.wgsl
pixie/src/: application.rs  atlas.rs  components.rs  engine.rs  lib.rs
pixie/src/dispatcher/: mod.rs  multi_thread.rs  single_thread.rs
pixie/src/renderer/: builder.rs  error.rs  font_manager.rs  gpu_resource_manager.rs  mesh.rs  mod.rs  pipeline_manager.rs  render_input_data.rs  render_state.rs  render_world_extractor.rs  renderer.rs  texture.rs
pixie/src/resources/: camera.rs  mod.rs  resource_container.rs
pixie/src/systems/: apply_gravity.rs  collision_system.rs  mod.rs  update_animation.rs  update_camera.rs  update_physics.rs
