[workspace]
resolver = "2"
members = [
    "pixie",
    "examples/flappy_bird",
    "examples/physics_demo"
]

[workspace.dependencies]
cfg-if = "1.0"
anyhow = "1.0"
winit = "0.30"
env_logger = "0.11"
log = "0.4"
wgpu = "27.0"
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
cgmath = "0.18"
instant = "0.1"
rand = "0.8"
fontdue = "0.7"
futures-intrusive = "0.5"
hecs = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# WASM specific dependencies
console_error_panic_hook = "0.1"
console_log = "1.0.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
getrandom = { version = "0.2", features = ["js"] }