[package]
name = "pixie"
version = "0.1.0"
edition = "2021"
description = "Generic game engine with wgpu rendering and ECS"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
anyhow = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
cgmath = { workspace = true }
instant = { workspace = true }
rand = { workspace = true }
fontdue = { workspace = true }
futures-intrusive = { workspace = true }
hecs = { workspace = true }
image = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
instant = { workspace = true, features = ["wasm-bindgen"] }
getrandom = { workspace = true }