[package]
name = "physics_demo"
version = "0.1.0"
edition = "2021"
description = "2D Physics demo with bouncing balls"
license = "MIT"
repository = "https://github.com/lavumi/pixie"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "physics"
path = "src/main.rs"

[dependencies]
pixie = { path = "../../pixie" }
cfg-if = { workspace = true }
anyhow = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
specs-derive = { workspace = true }
cgmath = { workspace = true }
instant = { workspace = true }
rand = { workspace = true }
specs = { workspace = true }
image = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
instant = { workspace = true, features = ["wasm-bindgen"] }
getrandom = { workspace = true }
